@@ -1,3 +1,4 @@
 $USER1$=/tmp
 $USER2$=test2
 $USER2$=test3
+$PLUGINDIR$=/usr/local/plugins
